--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,11 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
   google_sign_in: ^6.1.6
+  googleapis: ^13.1.0
+  http: ^1.2.0
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
