--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,16 @@ dependencies:
   googleapis: ^13.1.0
   http: ^1.2.0
   geolocator: ^14.0.2
+  local_auth: ^3.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.1
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icon/
