--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   http: ^1.2.0
   geolocator: ^14.0.2
   local_auth: ^3.0.0
+  flutter_local_notifications: ^19.5.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
