--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,5 +1,5 @@
 flutter_launcher_icons:
   android: "ic_launcher"
   ios: true
-  image_path: "assets/icon/icon.png"
+  image_path: "assets/icon/app_logo.png"
   min_sdk_android: 21
