--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   geolocator: ^14.0.2
   local_auth: ^3.0.0
   flutter_local_notifications: ^19.5.0
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
@@ -38,3 +39,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icon/
+    - .env
